Fixed gapping issue on smaller resolutions. To ensure responsiveness, it is crucial at a later date to change the font sizes.

--- a/html/resources/css/style.css
+++ b/html/resources/css/style.css
@@ -37,7 +37,7 @@ section#loginPanel h1 {
 section#loginPanel form {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 2.778vh;
 }
 
 div.line {
